# nearfi_code

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  partitions.csv  prod_flash.sh  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.security
certs/: certificate.pem.crt  private.pem.key  public.pem.key  server.pem
components/button/: Kconfig  button.c
components/button/include/: button.h
components/buzzer/: CMakeLists.txt  Kconfig  buzzer.c
components/buzzer/include/: buzzer.h
components/esp_buzzer/: buzzer.c  esp_buzzer.c
components/esp_buzzer/include/: buzzer.h  esp_buzzer.h
components/esp_rgb_led/: Kconfig  esp_rgb_led.c
components/esp_rgb_led/include/: esp_rgb_led.h
components/getbit_mqtt/: CMakeLists.txt  Kconfig  mqtt.c
components/getbit_mqtt/include/: mqtt.h
components/wifi/: CMakeLists.txt  Kconfig  wifi.c
components/wifi/include/: wifi.h
components/ws2812_led/: CMakeLists.txt  Kconfig  ws2812_led.c
main/: CMakeLists.txt  Kconfig.projbuild  cdns.c  clients.c  component.mk  main.c  misc.c  nvs.c  passive_buzzer.c  server.c  settings.c  typedefs.h
signing_keys/: secure_boot_signing_key_dev_1.pem  secure_boot_signing_key_dev_2.pem  secure_boot_signing_key_dev_3.pem
spiffs/: index.html
web/: index.html
